# RECREATE2

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: benchmark.hpp  keccak.hpp  miner.hpp  targets.hpp  util.hpp
src/: benchmark.cpp  keccak_cpu.cpp  keccak_device.cu  main.cpp  miner.cu  miner_cpu.cpp  score_examples.cu
test/: test.cpp
